fix: place profile image in correct location on small screens

--- a/_includes/site.css
+++ b/_includes/site.css
@@ -325,8 +325,8 @@ article {
         flex-flow: row wrap;
     }
     div.profile {
-        grid-column: 2/2;
-        grid-row: 2/2;
+        grid-column: 2 / 2;
+        grid-row: 3 / span 3;
     }
     div.profile > img[src="/img/profile.jpg"] {
         width: 30%;
